# breeze-scalable

./: AUTHORS  CMakeLists.txt
kstyle/: CMakeLists.txt  breeze-scalable.themerc  breeze.h  breeze.json  breezehelper.cpp  breezescaling.cpp  breezescaling.h  breezestyle.cpp  breezestyleplugin.cpp
libbreezecommon/: CMakeLists.txt
